# flask-rest-api

./: pyproject.toml
flask_rest_api/: __init__.py  arguments.py  blueprint.py  pagination.py  response.py
flask_rest_api/spec/: __init__.py
flask_rest_api/spec/templates/: redoc.html  swagger_ui.html
tests/: test_api.py  test_arguments.py  test_blueprint.py  test_pagination.py  utils.py
