[tool.poetry]
name = "flask-rest-api"
version = "0.1.0"
description = ""
authors = ["ssfdust <ssfdust@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
marshmallow = "^3.0"
flask = "^1.1"
webargs = "^5.4"
apispec = "^2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
